# postgres-examples

./: README.md  docker-compose.yml  pyproject.toml
sql/: 01_create_person_table.sql  02_select.sql  03_distnct.sql  04_where.sql  05_comparison_operators.sql  06_limit_offset.sql  07_in.sql  08_between.sql  09_like.sql  10_group_by.sql  11_group_by_having.sql  12_create_car_table.sql  13_max_min_avg.sql  14_sum.sql  15_arithmetic.sql  16_coalesce.sql  17_nullif.sql  18_datetime.sql  19_add_subtract_date.sql  20_extract.sql  21_age_func.sql  22_primary_keys.sql  23_unique.sql  24_check_constraints.sql  25_delete.sql  26_update.sql  27_on_conflict_do_nothing.sql  28_upsert.sql  29_create_person-car_table.sql  30_inner_join.sql  31_left_join.sql  32_delete_with_foreign_keys.sql  33_export_csv.sql  34_seqences.sql  person_car.csv  video_url.txt
sql/injection/: 01_create_products.sql  02_create_user_table.sql
src/: async_cursor_conn.py  cursor_conn.py
src/asyncpg_conn/: conn.py  json_conversion.py  transaction.py
src/databases_conn/: conn.py  select.py  transaction.py
src/injection/: 01_product.py  02_user.py  03_other_table.py  04_boolean_based_blind_sql_injection.py  05_time_based_blind_sql_injection.py  06_error_based_blind_sql_injection.py  prepared_statements.py
src/psycopg_conn/: uuid_type.py
src/sqlmodel_conn/: conn.py  create_table.py  delete.py  insert.py  update.py  where.py
