[project]
name = "postgres-examples"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "EbaraKoji", email = "kojieva5270@gmail.com" }
]
dependencies = [
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_examples"]


[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["E402"]
